deployment/dev/kubernetes/lavapodler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    lavapod-component: lavapodler
  labels:
    app: lavapodler
  name: lavapodler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lavapodler
  strategy: {}
  template:
    metadata:
      annotations:
        lavapod-component: lavapodler
      labels:
        app: lavapodler
    spec:
      containers:
      - env:
        - name: NATS
          value: nats://lavapod:lavapod@nats:4222
        image: lavapod/lavapodler:master
        imagePullPolicy: "Always"
        name: lavapod
        resources:
          limits:
            memory: 70m
            cpu: 100m
      restartPolicy: Always
