deployment/dev/kubernetes/nats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    lavapod-component: nats
  labels:
    app: nats
  name: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      annotations:
        lavapod-component: nats
      labels:
        app: nats
    spec:
      containers:
      - args:
        - --user
        - lavapod
        - --pass
        - lavapod
        image: nats
        imagePullPolicy: "Always"
        name: nats
        ports:
        - containerPort: 4222
      restartPolicy: Always
