deployment/dev/kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
     lavapod-component: redis
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      annotations:
         lavapod-component: redis
      labels:
        app: redis
    spec:
      containers:
      - image: redis
        imagePullPolicy: "Always"
        name: redis
        ports:
        - containerPort: 6379
        resources:
          limits:
            memory: 100m
            cpu: 100m
      restartPolicy: Always
