deployment/dev/kubernetes/websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: websocket
  name: websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: websocket
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: websocket
    spec:
      containers:
      - env:
        - name: NATS
          value: nats://lavapod:lavapod@nats:4222
        - name: REDIS_HOST
          value: redis
        - name: REDIS_PORT
          value: "6379"
        image: lavapod/websocket:master
        imagePullPolicy: "Always"
        name: websocket
        ports:
        - containerPort: 8000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
