deployment/dev/kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    lavapod-component: redis
  labels:
    app: redis
  name: redis
spec:
  ports:
  - name: "6379"
    port: 6379
    targetPort: 6379
  selector:
    app: redis
