deployment/dev/kubernetes/websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    lavapod-component: websocket
  labels:
    app: websocket
  name: websocket
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    app: websocket
