deployment/dev/kubernetes/websocket-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: websocket
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ws.lavapod.matthieu-dev.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: websocket
          servicePort: 8000
